2007-11-30  Brian Warner  <warner@lothar.com>

	* buildbot/status/builder.py (BuilderStatus): small docs patches
	from Greg Ward.. thanks!
	* buildbot/process/base.py (Build): same

2007-11-29  Brian Warner  <warner@lothar.com>

	* buildbot/slave/commands.py (Mercurial._maybeFallback): add an
	_abandonOnFailure call to the fallback, to skip the 'update' step
	if the checkout fails.
	(Mercurial._maybeFallback): More fixes: look for error messages
	generated by every version of hg from 0.7 to the current 0.9.5,
	including development versions as of rev 92991422a847. Also make
	sure to return the exit code of non-fallbackable errors so that
	other steps can attempt a workaround.

2007-11-28  Brian Warner  <warner@lothar.com>

	* buildbot/slave/commands.py (Mercurial._maybeFallback): improve
	hg fallback so that it works when the client hg is new and the
	server hg is old (the error message is different in this case).

2007-11-27  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_p4poller.py: hush pyflakes warning

	* buildbot/slave/commands.py (Mercurial._maybeFallback): when hg
	is doing a 'clone' operation, to a remote repository (e.g. over
	HTTP), and either the server or the client is hg-0.9.1 or older,
	'hg clone' cannot accept a --rev argument: instead, you have to
	clone the tip and then update back to the desired revision. Added
	code to detect this failure mode and fall back to the clone+update
	scheme. Closes #122 and #103.
	(ShellCommand.__init__): add a keepStderr= flag to support this

	* buildbot/test/test_vc.py (VCBase._do_vctest_clobber_2): add a
	test that does a checkout to a specific version, to exercise the
	mercurial limitation workaround.
	(Mercurial.serveHTTP): add code to test hg checkout over HTTP,
	using mercurial's built-in 'hg serve' command. Because of
	limitations in hg, this code uses a randomly-selected TCP
	port (rather than claiming a free one), so every once in a while